<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    tools:context="com.lokeshkvn.org.statlog.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_account_box_black_48dp"
                    android:tint="#818080" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:text="@string/profile"
                    android:textColor="#011152" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_event_note_black_48dp"
                    android:tint="#818080" />

                <Button

                    android:id="@+id/button2"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:text="@string/Attendance"
                    android:textColor="#010865" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_insert_chart_black_48dp"
                    android:tint="#818080" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:text="@string/Performance"
                    android:textColor="#011152" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_get_app_black_48dp"
                    android:tint="#818080" />

                <Button

                    android:id="@+id/button4"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:text="@string/Schedules"
                    android:textColor="#010865" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_insert_invitation_black_48dp"
                    android:tint="#818080" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:text="@string/STimeTable"
                    android:textColor="#011152" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_format_list_bulleted_black_48dp"
                    android:tint="#818080" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:text="@string/NoticeBoard"
                    android:textColor="#010865" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button2"
        android:text="@string/LOGOUT"
        android:textColor="#a70205"
        android:textSize="24sp" />

</RelativeLayout>
